k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  selector:
    app: http-server
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
